# RedBuri

./: .gitignore  README.md
ros2_ws/src/base_control/: CMakeLists.txt  package.xml
ros2_ws/src/base_control/config/: base_cmd_to_motor.yaml
ros2_ws/src/base_control/src/: base_cmd_to_motor.cpp  base_vel_to_motor.cpp  cmd_vel_to_motor.cpp
ros2_ws/src/redburi_description/launch/: display.launch.py
ros2_ws/src/redburi_description/urdf/: arm.urdf.xacro
ros2_ws/src/redburi_launch/launch/: redburi_all.launch.py  redburi_sim.launch.py  remote_all.launch.py  serial_only.launch.py  servo_teleop.launch.py  servo_teleop_real.launch.py  teleop.launch.py  teleop_sim.launch.py
ros2_ws/src/redburi_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/redburi_moveit/config/: joint_limits.yaml  moveit.rviz  redburi_arm.srdf  servo.yaml
ros2_ws/src/redburi_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/redburi_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/redburi_msgs/msg/: ArmJoint.msg  BaseCommand.msg  BaseMotor.msg  BaseVel.msg
ros2_ws/src/serial_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/serial_bridge/config/: serial_bridge.yaml
ros2_ws/src/serial_bridge/include/serial_bridge/: serial.hpp
ros2_ws/src/serial_bridge/src/: serial.cpp  serial_bridge.cpp  serial_bridge_node.cpp  serial_node.cpp
ros2_ws/src/teleop/: CMakeLists.txt  package.xml
ros2_ws/src/teleop/config/: arm_joint_state_estimator_node.yaml  dualshock4.yaml  joy_arm_cartesian_node.yaml  joy_arm_joint_node.yaml  joy_base_node.yaml  joy_dualshock4.yaml  joy_to_cmd_vel.yaml  servo_arm_motor_node.yaml
ros2_ws/src/teleop/src/: arm_joint_state_estimator_node.cpp  joint_state_sim_node.cpp  joy_arm_cartesian_node.cpp  joy_arm_joint_node.cpp  joy_base_node.cpp  joy_mode_node.cpp  joy_to_base_cmd.cpp  joy_to_base_vel.cpp  joy_to_cmd_vel.cpp  servo_arm_motor_node.cpp
stm32/nucleo_f446re/: .mxproject  Makefile  nucleo_f446re.ioc  platformio.ini  stm32pio.ini
stm32/nucleo_f446re/Inc/: stm32f4xx_it.h  tim.h  usart.h
stm32/nucleo_f446re/Src/: can.c  gpio.c  main.c  main.cpp  stm32f4xx_it.c  tim.c  usart.c  user_can_callback.cpp  user_tim_callback.cpp  user_uart_callback.cpp
stm32/nucleo_f446re/lib/base_motor_receiver/: base_motor_receiver.cpp  base_motor_receiver.hpp
stm32/nucleo_f446re/lib/base_msg_receiver/: base_msg_receiver.cpp  base_msg_receiver.hpp
stm32/nucleo_f446re/lib/c620_can/: c620_can.cpp  c620_can.hpp  can_callback.cpp
stm32/nucleo_f446re/lib/c620_control/: c620_control.cpp  c620_control.hpp
stm32/nucleo_f446re/lib/log_uart/: log_uart.hpp
stm32/nucleo_f446re/lib/motor_cmd_uart/: motor_cmd_uart.cpp  motor_cmd_uart.hpp
stm32/nucleo_f446re/lib/motor_command_receiver/: motor_command_receiver.cpp  motor_command_receiver.hpp  motor_command_reciever.cpp
stm32/nucleo_f446re/lib/run/: c620_test.txt  run.cpp  run.hpp  run_c.h  sts3215_test.txt
stm32/nucleo_f446re/lib/runs/: test_c620.hpp
stm32/nucleo_f446re/lib/step_axis/: step_axis.cpp  step_axis.hpp
stm32/nucleo_f446re/lib/sts3215/: sts3215.cpp  sts3215.hpp
stm32/nucleo_f446re/lib/uart_sender/: uart_sender.cpp  uart_sender.hpp
stm32/nucleo_f446re/lib/user_run/: arm_debug.txt  how_to_use_step_axis_lib.txt  how_to_use_sts3215_lib.txt
